...
                            Icons.Filled.AddCircleOutline,
                            "新建会话图标",
                            tint = Color.Black
                        ) // Or MaterialTheme.colorScheme.onPrimaryContainer
                        Spacer(Modifier.width(20.dp))
                        Text(
                            "新建会话",
                            fontWeight = FontWeight.Bold,
                            color = Color.Black, // Or MaterialTheme.colorScheme.onPrimaryContainer
                            fontSize = MaterialTheme.typography.bodyLarge.fontSize
                        )
                    }
                }
...
